fix: adjust card collection styles for improved layout and responsiveness, removed clamp for gap and padding.

--- a/_codux/boards/card-collection.board.css
+++ b/_codux/boards/card-collection.board.css
@@ -23,7 +23,7 @@
 .cardCollectionItems {
     display: flex;
     margin-top: 4vh;
-    gap: clamp(2rem, 0.2073rem + 1.4634vw, 1.25rem);
+    gap: 1.5rem;
     flex-direction: row;
 
     @media (width<= 768px) {
@@ -51,11 +51,11 @@
 }
 
 .cardCollectionContent {
-    padding: clamp(15px, 3vw, 30px);
+    padding: 20px;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: clamp(10px, 2vw, 4px);
+    gap: 15px;
 }
 
 .cardCollectionTitle {
